# SkyPong

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  a.out  idrk.cpp  readme.md  titleAnimtest.cpp  what  ws.cpp  wsl.cpp
.github/workflows/: cmake-multi-platform.yml
include/Core/: Application.hpp  Scene.hpp  SceneManager.hpp  Scope.hpp
include/Discord/: DiscordManager.hpp  DiscordWrapper.h
include/Game/: GameState.hpp
include/Network/: NetworkClient.hpp  Protocol.hpp
include/Scenes/: ChoiceMenu.hpp  MainMenu.hpp  OnlineGame.hpp  OnlineLobby.hpp  PongGame.hpp
includes/: colors.h  common.h  loading.h  pong.h  settings.h  socket.h  title.h
server/: index.js  package-lock.json  package.json
src/: main.cpp
src/Core/: Application.cpp  SceneManager.cpp
src/Discord/: DiscordManager.cpp  DiscordWrapper.cpp
src/Network/: NetworkClient.cpp  Protocol.cpp
src/Scenes/: ChoiceMenu.cpp  MainMenu.cpp  OnlineGame.cpp  OnlineLobby.cpp  PongGame.cpp
src/Server/: Player.hpp  Room.hpp  Server.cpp  Server.hpp  main.cpp
src/base/: main.cpp
src/base/backend/Networking/: Socket.cpp
src/base/backend/screens/: SetTheme.cpp
src/base/screens/scenes/: Loading.cpp  TitleScreen.cpp
src/base/util/: Colors.cpp  DrawTable.cpp  SettingsClass.cpp  StartWindow.cpp
